# vosaybot

./: .dockerignore  .gitignore  Makefile  alembic.ini  pyproject.toml  readme.md
configs/: bot.env.example  db.env.example  pgadmin.env.example
dockerfiles/: bot.dockerfile  docker-compose.dev.yml  docker-compose.yml
src/: run.py
src/bot/: __init__.py
src/bot/callbacks/: __init__.py  delete_voice.py  show_voices.py  voices.py
src/bot/commands/: __init__.py  delete_account.py  my_voices.py  start.py
src/bot/inlines/: __init__.py  search.py
src/bot/utils/: __init__.py  constants.py  decorators.py  inline_keyboard.py  text.py
src/migrations/: env.py
src/migrations/versions/: 20220108_14:49_9e94a2a827f6_basic_functions_and_extensions.py  20220108_14:49_9e94a2a827f6_create_basic_functions_and_extensions.py  20220207_05:33_a81e4bcce244_create_table_categories.py  20220207_05:35_7db2705b1b0e_create_table_emotions.py  20220207_05:36_cf07579a9d1a_create_table_subcategories.py  20220209_13:20_4419770493ca_create_table_voices.py  20220309_15:36_751a1c4e308e_create_table_users.py  20220309_15:44_7c60ed9fe75c_create_table_user_voice_relations.py  20220424_17:32_8f4853cb5403_create_table_invite_links.py  20220424_17:36_81ee5fe803b4_create_table_user_invite_link_relations.py  (+2 more)
src/models/: __init__.py  base.py  categories.py  emotions.py  invite_links.py  subcategories.py  user_invite_link_relations.py  user_voice_relations.py  users.py  utils.py  voices.py
src/scripts/: add_voices_in_db.py
src/settings/: __init__.py  base.py  development.py  production.py
(+17 files in other folders)
