[tool.poetry]
name = "voice-bot"
version = "0.1.0"
description = "Voice bot"
authors = ["master <master@botproduction.org>"]

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = false

[tool.black]
line-length = 99

[tool.poetry.dependencies]
python = "^3.11"

python-telegram-bot = "^20.3"
loguru = "^0.7.0"
pydantic = {version = "^1.10.9", extras = ["dotenv"]}

databases = {version = "0.7.0", extras = ["asyncpg"]}
alembic = "^1.11.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.7"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
